--- a/SDP_SYSTEM.cfg
+++ b/SDP_SYSTEM.cfg
@@ -12,7 +12,7 @@ timeout=5
 gpio=7
 
 [CEMS_APIKEY]
-URL=http://104.154.116.241/mactronic/input/post.json?node=
+URL=http://104.155.148.46/mactronic/input/post.json?node=
 API_KEY=b66c94a03e6ab53d3f3ef4a09abee385
 NODE_NAME = SDP_BMS_
 
