--- a/CDC_Config.ini
+++ b/CDC_Config.ini
@@ -1,12 +1,12 @@
 [Gateway]
-Gateway_Addr = 192.168.2.134
+Gateway_Addr = 192.168.0.102
 Gateway_Port = 8877
 
 [CEMS]
 CEMS_URL = http://54.186.194.10/mactronic/
 API_Key = b30a2f079b6d22deeb2254cd4c072966
-NODE_NAME = JadeMine
-Meter_IP = 192.168.2.133
+NODE_NAME = Eco-Fuh-sang
+Meter_IP = 192.168.0.101
 Port = 502
 TCM3001_ID = 1
-Num_TCM3003 = 5
+Num_TCM3003 = 4
